--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 /*  палитра цветов и переменные */
 :root {
+  --max-width-site: 1600px;
+  --max-width-container: 1200px;
+
   --font-family-site: "Roboto", sans-serif;
   --font-weight-regular: 400;
   --font-weight-medium: 500;
@@ -13,10 +16,13 @@
 
   --accent-color: #2196f3;
 
+  --icon-color: #afb1b8;
+
   --background-prime-color: #ffffff;
   --background-secondary-color: #2f303a;
   --backgrount-third-color: #f5f4fa;
 
+  --border-radius: 4px;
   --project-card-border: 1px solid #eee;
 
   /* интервал между элементами в сетках */
@@ -42,6 +48,7 @@ body {
 
 /* ссылки на страничках */
 .link {
+  color: inherit;
   text-decoration: none;
   letter-spacing: 0.02em;
 }
@@ -52,7 +59,7 @@ body {
   border: 0;
   color: var(--text-color);
   background-color: var(--backgrount-third-color);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   letter-spacing: 0.03em;
 }
 
@@ -74,10 +81,20 @@ body {
   margin-bottom: 0;
 }
 
+/* заголовок секции */
+.title-section {
+  margin-bottom: 50px;
+  text-align: center;
+  font-weight: var(--font-weight-bold);
+  font-size: 36px;
+  line-height: 1.17;
+}
+
 /* скрытые заголовки сайта */
 /* ! временный костыль */
 .hidden-title {
-  display: none;
+  font-size: 0;
+  line-height: 0;
 }
 
 /* общий стиль для параграфов */
@@ -94,11 +111,20 @@ body {
   list-style-type: none;
 }
 
+/* ссылки на социальные сети */
+/* ссылка на социальную сеть сотрудника */
+.social-link {
+  width: 44px;
+  height: 44px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
 /* логотип */
 .logo-link {
-  --logo-dark-color: #000000;
-  --logo-light-color: #ffffff;
-  --logo-accent-color: var(--accent-color);
+  margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
   font-family: "Raleway", sans-serif;
@@ -106,6 +132,9 @@ body {
   font-size: 26px;
   text-decoration: none;
   line-height: 1.174;
+  --logo-dark-color: #000000;
+  --logo-light-color: #ffffff;
+  --logo-accent-color: var(--accent-color);
   color: var(--logo-dark-color);
 }
 
@@ -116,9 +145,16 @@ body {
 
 /* общий контейнер для всех разделов и секций */
 .container {
-  width: 1200px;
+  max-width: var(--max-width-container);
   margin: 0 auto;
   padding: 0 15px;
+}
+
+/* секции */
+.section {
+  max-width: var(--max-width-site);
+  padding: 94px 0;
+  margin: 0 auto;
 }
 
 /* header */
@@ -138,7 +174,6 @@ body {
 
 /* список навигационных ссылок */
 .nav-list {
-  margin-left: 93px;
   display: flex;
 }
 
@@ -149,7 +184,6 @@ body {
   padding: 32px 0;
   display: flex;
   font-weight: var(--font-weight-medium);
-  color: var(--text-color);
 }
 
 /* список ссылок с контактами */
@@ -160,13 +194,21 @@ body {
 
 /* ссылки контактов в шапке */
 .contact-list .link {
+  display: inline-flex;
+  align-items: center;
   color: var(--text-muted-color);
 }
 
 /* расстояние между ссылками в шапке */
-.nav-list .item:not(:first-child),
-.contact-list .item:not(:first-child) {
-  margin-left: 50px;
+.nav-list .item:not(:last-child),
+.contact-list .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+/* декорация перед контактными ссылками */
+.icon {
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 /* убрал нижний зазор во всех сприсках с картинками */
@@ -188,8 +230,15 @@ body {
   background-color: var(--background-secondary-color);
 }
 
+.footer-box {
+  display: flex;
+  color: var(--text-light-color);
+}
+
 /* стилизация логотипа в подвале */
 .footer-box .logo-link {
+  display: block;
+  margin-bottom: 20px;
   padding-top: 0;
   padding-bottom: 0;
   color: var(--logo-light-color);
@@ -197,13 +246,13 @@ body {
 
 /* адресный список ссылок*/
 .address-list {
-  margin-top: 20px;
   font-style: normal;
+  margin-right: 70px;
 }
 
 /* отступы между элементами списка ссылок*/
-.address-list .item:not(:first-child) {
-  margin-top: 9px;
+.address-list .item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 /* оформление ссылок в футере */
@@ -214,7 +263,7 @@ body {
 
 /* цвет строки-ссылки с почтовым адресом */
 .address-link {
-  color: var(--text-light-color);
+  color: inherit;
 }
 
 /* 
@@ -229,6 +278,41 @@ body {
   color: var(--accent-color);
 }
 
+.social-link:hover,
+.social-link:focus {
+  color: var(--text-light-color);
+  background-color: var(--accent-color);
+}
+
+/* заголовок списка соц. сетей */
+.footer-social .title {
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.143;
+  font-weight: var(--font-weight-bold);
+  text-transform: uppercase;
+}
+
+/* список социальных ссылок в footer */
+.footer-social-list {
+  display: flex;
+}
+
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+/* соц.ссылка в футере */
+.footer-social-link {
+  color: inherit;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* иконка соц.сети в футере */
+.footer-social-icon {
+  fill: currentColor;
+}
+
 /* index.html */
 /* герой */
 .hero-box {
@@ -236,9 +320,18 @@ body {
   background-color: var(--background-secondary-color);
 }
 
+.overlay {
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/img.jpg");
+}
+
 /* заголовок секции hero */
 .hero-box .title {
-  margin-bottom: 30px;
+  max-width: 696px;
+  margin: 0 auto 30px;
   font-weight: var(--font-weight-black);
   font-size: 44px;
   line-height: 1.364;
@@ -267,15 +360,44 @@ body {
 /* список особенностей */
 .features-list {
   display: flex;
-  flex-wrap: wrap;
-  margin-left: calc(-1 * var(--features-card-gap));
+  margin-right: calc(-1 * var(--features-card-gap));
 }
 
+/* сетка особенностей */
 .features-list > .item {
-  display: flex;
-  margin-left: var(--features-card-gap);
+  margin-right: var(--features-card-gap);
   flex-basis: calc(100% / 4 - var(--features-card-gap));
 }
+
+/* декорация над элементом особенностей */
+.features-icon-box {
+  padding: 25px 0;
+  margin-bottom: var(--gap);
+  border-radius: var(--border-radius);
+  background-color: var(--backgrount-third-color);
+}
+
+.icon-features {
+  margin: 0 auto;
+  display: block;
+}
+
+/* задаем каждой особенности свою декорацию */
+/* .features-list > .item:nth-child(1)::before {
+  background-image: url("../images/antenna.svg");
+}
+
+.features-list > .item:nth-child(2)::before {
+  background-image: url("../images/clock.svg");
+}
+
+.features-list > .item:nth-child(3)::before {
+  background-image: url("../images/diagram.svg");
+}
+
+.features-list > .item:nth-child(4)::before {
+  background-image: url("../images/astronaut.svg");
+} */
 
 /* заголовки в списках особенностей */
 .features-list .title {
@@ -298,52 +420,33 @@ body {
   padding: 0 0 94px;
 }
 
-/* заголовок секции */
-.doing-box .title {
-  margin-bottom: 50px;
-  text-align: center;
-  font-weight: var(--font-weight-bold);
-  font-size: 36px;
-  line-height: 1.17;
-}
-
 /* фото примеров */
 .doing-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: calc(-1 * var(--doing-card-gap));
+  margin-right: calc(-1 * var(--doing-card-gap));
 }
 
 .doing-list > .item {
   flex-basis: calc(100% / 3 - var(--doing-card-gap));
-  margin-left: var(--doing-card-gap);
+  margin-right: var(--doing-card-gap);
 }
 
 /* Секция наша команда */
 .team-box {
-  padding: 94px 0;
   background-color: var(--backgrount-third-color);
-}
-
-/* заголовок секции наша команда */
-.team-box .title {
-  margin-bottom: 50px;
-  text-align: center;
-  font-weight: var(--font-weight-bold);
-  font-size: 36px;
-  line-height: 1.172;
 }
 
 /* список карточек сотрудников */
 .team-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: calc(-1 * var(--team-card-gap));
+  margin-right: calc(-1 * var(--team-card-gap));
 }
 
 /* карточка сотрудника команды */
 .team-card {
-  margin-left: var(--team-card-gap);
+  margin-right: var(--team-card-gap);
   flex-basis: calc(100% / 4 - var(--team-card-gap));
   background-color: var(--background-prime-color);
   box-shadow: var(--card-team-shawow);
@@ -353,7 +456,7 @@ body {
 
 /* описание сотрудника команды*/
 .team-card-content {
-  padding: 30px;
+  padding: 30px 32px;
 }
 
 /* фамилия, имя сотрудника */
@@ -365,12 +468,65 @@ body {
   line-height: 1.188;
 }
 
-/* должность стотрудинка */
+/* должность сотрудинка */
 .team-card .text {
+  margin-bottom: 16px;
   text-align: center;
   font-size: 16px;
   line-height: 1.188;
   color: var(--text-muted-color);
+}
+
+/* список ссылок на соц.сети сотрудника */
+.team-social-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* ссылка на социальную сеть сотрудника */
+.team-social-link {
+  color: var(--icon-color);
+}
+
+/* иконка социальной сети сотрудника*/
+.social-icon-team {
+  fill: currentColor;
+}
+
+/* секция наши клиенты */
+
+/* список клиентов */
+.clients-list {
+  display: flex;
+  margin-right: calc(-1 * var(--gap));
+}
+
+/* сетка для клиентов */
+.clients-list > .item {
+  flex-basis: calc(100% / 6 - var(--gap));
+  margin-right: var(--gap);
+}
+
+/* ссылка на клиента */
+.client-link {
+  display: block;
+  padding: 16px 0;
+  color: var(--icon-color);
+  border-radius: var(--border-radius);
+  border: 1px solid var(--icon-color);
+}
+
+/* иконка логотипа клиента */
+.icon-client {
+  margin: 0 auto;
+  display: block;
+  fill: currentColor;
+}
+
+/* изменения при наведении и фокусе рамки */
+.client-link:hover,
+.client-link:focus {
+  border: 1px solid var(--accent-color);
 }
 
 /* portfolio.html */
@@ -394,14 +550,14 @@ body {
 }
 
 /* интервалы между кнопками фильтра */
-.btn-item:not(:first-child) {
-  margin-left: 8px;
+.btn-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 /* список проектов*/
 .project-list {
-  margin-top: calc(-1 * var(--project-card-gap));
-  margin-left: calc(-1 * var(--project-card-gap));
+  margin-bottom: calc(-1 * var(--project-card-gap));
+  margin-right: calc(-1 * var(--project-card-gap));
   display: flex;
   flex-wrap: wrap;
   background-color: var(--background-prime-color);
@@ -409,8 +565,8 @@ body {
 
 /* отступы между карточками - сетка */
 .project-card {
-  margin-top: var(--project-card-gap);
-  margin-left: var(--project-card-gap);
+  margin-bottom: var(--project-card-gap);
+  margin-right: var(--project-card-gap);
   flex-basis: calc(100% / 3 - var(--project-card-gap));
 }
 
