--- a/css/styles.css
+++ b/css/styles.css
@@ -86,11 +86,21 @@ body {
   line-height: 1.17;
 }
 
-/* скрытые заголовки сайта */
-/* ! временный костыль */
+/* скрытые элементы сайта */
+.visually-hidden,
 .hidden-title {
-  font-size: 0;
-  line-height: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  outline: 0;
+  outline-offset: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* общий стиль для параграфов */
@@ -123,7 +133,7 @@ body {
 
 /* убрал нижний зазор во всех сприсках с картинками */
 .card-thumb > img {
-  min-width: 100%;
+  max-width: 100%;
   display: block;
 }
 
