lh в ссылках по макету исправил

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,7 @@ body {
   display: flex;
   align-items: center;
   padding: 32px 0;
+  line-height: 1.172;
   font-weight: var(--font-weight-medium);
 }
 
